--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ body.black .top-nav-sec.fixed-nav .top-nav {
     width: 6px;
     height: 6px;
     border-radius: 3px;
-    background-color: #a177b4;
+    background-color: #898989;
     visibility: hidden;
     opacity: 0;
     position: absolute;
@@ -427,7 +427,7 @@ body.black .top-nav-sec.fixed-nav .top-nav {
 
 .top-nav .right-btn-area .nav-get-started a {
     text-decoration: none;
-    color: #a177b4;
+    color: #898989;
     background-color: #efe6f4;
     padding: 10px 20px;
     border-radius: 20px;
@@ -441,7 +441,7 @@ body.black .top-nav-sec.fixed-nav .top-nav {
 
 .top-nav .right-btn-area .nav-get-started a:hover {
     color: #fff;
-    background-color: #a177b4;
+    background-color: #898989
 }
 
 .top-nav .mobile-bottom-contact {
@@ -466,7 +466,7 @@ body.black .top-nav-sec.fixed-nav .top-nav {
 
 .top-nav .mobile-bottom-contact .nav-phone-number a {
     text-decoration: none;
-    color: #a177b4;
+    color: #898989;
     font-weight: 600;
 }
 
@@ -476,7 +476,7 @@ body.black .top-nav-sec.fixed-nav .top-nav {
 }
 
 .top-nav .mobile-bottom-contact .nav-social-media a {
-    color: #a177b4;
+    color: #898989;
     padding: 0 5px;
 }
 
@@ -594,7 +594,7 @@ body.black .top-nav-sec.fixed-nav .top-nav {
 .landing-section .landing-left-text .landing-get-started a {
   text-decoration: none;
   color: #FFFFFF;
-  background-color: #a177b4;
+  background-color: #898989;
   padding: 10px 20px;
   border-radius: 20px;
   line-height: 20px;
